--- a/assignment/signup.html
+++ b/assignment/signup.html
@@ -52,7 +52,7 @@
 
         <div>
             <p>By creating an account you agree to our <a href="#" id="link">Terms & Privacy</a>.</p>
-            <a href="login.html"><button type="submit" class="registerbtn" ondblclick="alert();"><h2><b>Register</b></h2></a></button>
+            <a href="login.html"><button type="submit" class="registerbtn" ><h2><b>Register</b></h2></a></button>
         </div>
 
         
